# PyTsfit

./: GPSTime.py  PyTsfit.py  PyTsfit_MCMC.py  PyTsfit_MCMC_MPI.py  README.md  batch_fit.py  config.yaml  do_pytsfit.py  do_pytsfit_mcmc_postseismic.py  geotools.py  plot_neu_ts.py  postseismic_fit.py  pyproject.toml  requirements.txt
doc/: pytsfit.aux  pytsfit.tex
example/: batch_fit.py  cmnc_itrf14.gmtvec  eq_rename.eq  gorkha_2yr.gmtvec  tsfit_mcmc.py  tsfit_mcmc_mpi.py  tsfit_mcmc_mpi_new.py
scripts/: detect_step_outlier.py  do_pytsfit.py  do_pytsfit_mcmc_coseismic.py
src/PyTsfit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/pytsfit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: eq_rename.eq  model.vel.gmtvec  plot_corner.py
